--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/footer/footer.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/footer/footer.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="border-t border-gray-300 mt-8 bg-gray-100">
+    <div class="container mx-auto px-4 py-6 text-center text-gray-600">
+        &copy; 2024 RCF Soluciones Informáticas. Todos los derechos reservados.
+    </div>
+</footer>
