--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/header/header.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/header/header.html
@@ -1,5 +1,7 @@
 <header class="sticky top-0 z-50 bg-white/90 backdrop-blur border-b border-slate-200">
-    <app-topbar></app-topbar>
+    @if (showTopbar | async) {
+  <app-topbar></app-topbar>
+}
     <div class="mx-auto max-w-7xl px-4">
         <div class="flex h-16 items-center justify-between">
             <!-- Izquierda: menú móvil + marca -->
@@ -69,7 +71,7 @@
         </div>
 
         <!-- Búsqueda (desktop) -->
-        <div class="hidden md:block py-3">
+        <!-- <div class="hidden md:block py-3">
             <form class="relative" role="search" (submit)="onSearch($event)">
                 <span class="pointer-events-none absolute left-3 top-1/2 -translate-y-1/2 text-slate-400">
                     <svg class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -86,10 +88,10 @@
                 </button>
             </form>
         </div>
-    </div>
+    </div> -->
 
     <!-- Chips de categorías -->
-    <div class="border-t border-slate-200 bg-white">
+    <!-- <div class="border-t border-slate-200 bg-white">
         <div class="mx-auto max-w-7xl px-4">
             <div class="flex gap-2 overflow-x-auto py-2">
                 <button
@@ -121,6 +123,6 @@
                     Ofertas
                 </button>
             </div>
-        </div>
+        </div> -->
     </div>
 </header>
