--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/inicio-page/inicio-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/inicio-page/inicio-page.html
@@ -1,1 +1,97 @@
-<p>inicio-page works!</p>
+<div class="container mx-auto my-8 px-4">
+    <main>
+        <section>
+            <div class="p-6 rounded-lg shadow-md contenedor-inicio text-white flex flex-col items-start justify-end
+            h-80 md:h-96 lg:h-112 xl:h-128
+            w-full
+            bg-[linear-gradient(to_top,rgba(0,0,0,0.8),rgba(138,150,163,0)),url('/images/inicio-portada.jpg')] bg-cover bg-center">
+                <div class="flex items-start justify-end flex-col gap-3">
+                    <h2 class="text-3xl font-bold mb-2 w-72">RCF SOLUCIONES INFORMATICAS E.I.R.L.</h2>
+                    <p class="mb-4 w-96">En RCF Soluciones Informáticas, nos dedicamos a ofrecer las mejores soluciones tecnológicas para tu negocio.</p>
+                    <div class="flex *:flex-col sm:flex-row md:flex-row lg:flex-row xl:flex-row gap-4">
+                        <a routerLink="tienda/productos"
+                            class="bg-white text-blue-600 font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-blue-50 transition-all duration-300 border border-blue-600 cursor-pointer">
+                            Ver Productos
+                        </a>
+
+                        <a routerLink="tienda/servicios"
+                            class="bg-blue-600 text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-all duration-300 border border-transparent cursor-pointer">
+                            Servicios de Reparación
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="text-center my-12">
+            <h3 class="text-3xl font-bold mb-2 "><span class="border-b-1 border-gray-700">Nuestra Oferta Principal</span></h3>
+            <div class="flex justify-center">
+                <div class="mb-4 w-1/2 text-center text-gray-600">Ofrecemos una amplia gama de productos y servicios para satisfacer las necesidades de nuestros clientes. Desde hardware hasta software, estamos aquí para ayudarte.</div>
+            </div>
+        </section>
+        <section>
+            <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-5">
+                <div class="p-6 rounded-lg shadow-md flex flex-col items-start justify-start border border-transparent hover:border-blue-600 transition-all duration-300">
+                    <div>
+                        <div class="p-3 bg-sky-100 rounded-md mb-2 inline-block text-blue-600">
+                            <mat-icon>computer</mat-icon>
+                        </div>
+                        <p class="font-bold text-lg">Ordenadores al por Mayor</p>
+                        <p class="text-gray-600">Equipos de sobremesa y portátiles de las mejores marcas, ideales para entornos empresariales.</p>
+                    </div>
+                </div>
+                <div class="p-6 rounded-lg shadow-md flex flex-col items-start justify-start border border-transparent hover:border-blue-600 transition-all duration-300">
+                    <div>
+                        <div class="p-3 bg-sky-100 rounded-md mb-2 inline-block text-blue-600">
+                            <mat-icon>devices</mat-icon>
+                        </div>
+                        <p class="font-bold text-lg">Equipo Periférico</p>
+                        <p class="text-gray-600">Teclados, ratones y otros accesorios para mejorar tu experiencia informática. </p>
+                    </div>
+                </div>
+                <div class="p-6 rounded-lg shadow-md flex flex-col items-start justify-start border border-transparent hover:border-blue-600 transition-all duration-300">
+                    <div>
+                        <div class="p-3 bg-sky-100 rounded-md mb-2 inline-block text-blue-600">
+                            <mat-icon>storage</mat-icon>
+                        </div>
+                        <p class="font-bold text-lg">Programas Informáticos</p>
+                        <p class="text-gray-600">Soluciones de software a medida para optimizar la gestión de tu negocio.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="text-center my-12">
+            <h3 class="text-3xl font-bold mb-2 "><span class="border-b-1 border-gray-700">Servicios de Reparación</span></h3>
+            <div class="flex justify-center">
+                <div class="mb-4 w-1/2 text-center text-gray-600">Ofrecemos servicios de reparación y mantenimiento para todo tipo de equipos informáticos. Nuestro equipo de técnicos altamente capacitados está listo para ayudarte a resolver cualquier problema que puedas tener con tu hardware o software.</div>
+            </div>
+        </section>
+         <section>
+            <div class="grid md:grid-cols-2 sm:grid-cols-1 gap-5">
+                <div class="p-6 rounded-lg shadow-md flex flex-col items-start justify-start border border-transparent hover:border-blue-600 transition-all duration-300">
+                    <div>
+                        <div class="p-3 bg-sky-100 rounded-md mb-2 inline-block text-blue-600">
+                            <mat-icon>build</mat-icon>
+                        </div>
+                        <p class="font-bold text-lg">Reparacion de Equipos</p>
+                        <p class="text-gray-600">Dignóstico y reparación de hardware y software para todo tipo de dispositivos.</p>
+                    </div>
+                </div>
+                <div class="p-6 rounded-lg shadow-md flex flex-col items-start justify-start border border-transparent hover:border-blue-600 transition-all duration-300">
+                    <div>
+                        <div class="p-3 bg-sky-100 rounded-md mb-2 inline-block text-blue-600">
+                            <mat-icon>headset_mic</mat-icon>
+                        </div>
+                        <p class="font-bold text-lg">Reparación de Periféricos</p>
+                        <p class="text-gray-600">Solución de problemas en monitores, impresoras y otros dispositivos periféricos.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="text-center my-12">
+            <h3 class="text-3xl font-bold mb-2 "><span class="border-b-1 border-gray-700">¿Por qué elegirnos?</span></h3>
+            <div class="flex justify-center">
+                <div class="mb-4 w-1/2 text-center text-gray-600">En RCF Soluciones Informáticas, nos comprometemos a ofrecer productos y servicios de alta calidad, adaptados a las necesidades específicas de cada cliente. Nuestro equipo de expertos está siempre disponible para brindar asesoramiento y soporte técnico.</div>
+            </div>
+        </section>
+    </main>
+</div>
