v1 catalogo de servicios

--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/servicios-page/servicios-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/servicios-page/servicios-page.html
@@ -1,1 +1,121 @@
-<p>servicios-page works!</p>
+<div class="container mx-auto my-8 px-4">
+    <h1 class="text-center text-3xl font-bold">Catalogo de Servicios</h1>
+    <div class="flex justify-center mt-2">
+        <div class="text-gray-600 md:max-w-1/2">Ofrecemos una amplia gama de servicios diseñados para satisfacer tus necesidades tecnológicas. Desde reparaciones de hardware hasta soluciones de software personalizadas, estamos aquí para ayudarte.</div>
+    </div>
+    <div class="my-12">
+        <div>
+            <h2 class="text-2xl font-semibold">Reparación de Ordenadores</h2>
+        </div>
+        <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-2">
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-laptop.png" alt="Reparación de Portátiles" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Reparación de Portátiles</h3>
+                    <p>Solucionamos problemas de hardware y software en portátiles de todas las marcas.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-sobremesa.png" alt="Reparación de Sobremesas" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Reparación de Sobremesas</h3>
+                    <p>Reparamos y mejoramos ordenadores de sobremesa para un rendimiento óptimo.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-hardware.png" alt="Actualización de Hardware" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Actualización de Hardware</h3>
+                    <p>Mejoramos el rendimiento de tu equipo con actualizaciones de RAM, SSD y más.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/instalacion-software.png" alt="Instalación de Software" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Instalación de Software</h3>
+                    <p>Instalamos y configuramos sistemas operativos y aplicaciones.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="my-12">
+        <div>
+            <h2 class="text-2xl font-semibold">Reparación de Periféricos</h2>
+        </div>
+        <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-2">
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-mouse.png" alt="Reparación de Mouses" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Teclados y Ratones</h3>
+                    <p>Resolvemos problemas de conectividad o teclas atascadas en teclados y ratones.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-monitor.png" alt="Reparación de Monitores" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Reparación de Monitores</h3>
+                    <p>Solucionamos problemas de pantalla, píxeles muertos o fallos de retroiluminación.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-impresora.png" alt="Reparación de Impresoras" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Reparación de Impresoras</h3>
+                    <p>Reparamos impresoras con problemas de calidad de impresión, atascos de papel y más.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+            <div class="bg-white rounded-lg shadow-md">
+                <div>
+                    <img src="/images/servicio-audicular.png" alt="Reparación de Auriculares" class="w-full h-56 object-cover rounded-t-md mb-2">
+                </div>
+                <div class="space-y-2 mt-4 mb-2 p-4">
+                    <h3 class="text-lg font-semibold">Reparación de Auriculares</h3>
+                    <p>Reparamos auriculares con problemas de sonido, conectividad o batería.</p>
+                </div>
+                <div class="p-4">
+                    <button class="w-full bg-blue-300 hover:bg-blue-500 transition-colors duration-300 text-blue-600 hover:text-white px-4 py-2 rounded-md font-semibold">Ver más</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="my-16">
+        <div class="flex justify-center">
+            <a class="py-3 px-6 bg-blue-600 rounded-lg text-white hover:bg-blue-700 transition-colors duration-300" href="/servicios/servicio-personalizado">Solicitar Servicio Personalizado &#8594;</a>
+        </div>
+    </div>
+</div>
