--- a/front end/rcf-soluciones-informaticas-angular/src/app/admin/pages/productos-page/productos-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/admin/pages/productos-page/productos-page.html
@@ -1,1 +1,97 @@
-<p>productos-page works!</p>
+<div class="container mx-auto">
+    <h1 class="text-2xl font-bold">Mantenimiento de Productos</h1>
+    <div class="my-4">
+        <button
+            (click)="openDialog()"
+            class="bg-blue-600 text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-blue-700 transition-all duration-300 border border-transparent cursor-pointer">
+            <mat-icon class="align-middle">add</mat-icon> Agregar Producto
+        </button>
+    </div>
+    <div class="bg-white rounded-lg p-4 my-4">
+        Buscador de productos (a implementar)
+    </div>
+    <div>
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource">
+                <ng-container matColumnDef="SKU">
+                <th mat-header-cell *matHeaderCellDef> SKU </th>
+                <td mat-cell *matCellDef="let product"> {{product.sku}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Nombre">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let product"> {{product.name}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Descripción corta">
+                <th mat-header-cell *matHeaderCellDef> Descripción corta </th>
+                <td mat-cell *matCellDef="let product"> {{product.shortDescription}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Precio (S/.)">
+                <th mat-header-cell *matHeaderCellDef> Precio (S/.) </th>
+                <td mat-cell *matCellDef="let product"> {{ product.salePriceCents / 100 | currency:'PEN':'symbol':'1.2-2' }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Stock">
+                <th mat-header-cell *matHeaderCellDef> Stock </th>
+                <td mat-cell *matCellDef="let product"> {{product.stock}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Categoría">
+                <th mat-header-cell *matHeaderCellDef> Categoría </th>
+                <td mat-cell *matCellDef="let product"> {{product.category.name}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Activo">
+                <th mat-header-cell *matHeaderCellDef> Activo </th>
+                <td mat-cell *matCellDef="let product"> 
+                    <div
+                    class="inline-flex items-center gap-1 px-2 py-1 rounded-md text-sm font-medium"
+                    [ngClass]="product.active
+                        ? 'bg-green-100 text-green-700'
+                        : 'bg-red-100 text-red-700'">
+                    <mat-icon class="text-base">
+                        {{ product.active ? 'check_circle' : 'cancel' }}
+                    </mat-icon>
+                    </div>
+                </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let product">
+                   <div class="flex gap-2">
+                    <button
+                        (click)="verProducto(product.id)"
+                        mat-button
+                        class="flex items-center gap-1.5 px-3 py-1.5 rounded-md text-blue-600 bg-blue-50 hover:bg-blue-100 transition-colors">
+                        <mat-icon class="text-base">visibility</mat-icon>
+                    </button>
+
+                    <button
+                        (click)="openDialog(product)"
+                        mat-button
+                        class="flex items-center gap-1.5 px-3 py-1.5 rounded-md text-yellow-600 bg-yellow-50 hover:bg-yellow-100 transition-colors">
+                        <mat-icon class="text-base">edit</mat-icon>
+                    </button>
+
+                    <button
+                        (click)="deleteProduct(product.id)"
+                        mat-button
+                        class="flex items-center gap-1.5 px-3 py-1.5 rounded-md text-red-600 bg-red-50 hover:bg-red-100 transition-colors">
+                        <mat-icon class="text-base">delete</mat-icon>
+                    </button>
+                    </div>
+                </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                            showFirstLastButtons
+                            aria-label="Selección de página">
+            </mat-paginator>
+        </div>
+    </div>
+</div>
