--- a/front end/rcf-soluciones-informaticas-angular/src/app/admin/components/dialog/product-dialog/product-dialog.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/admin/components/dialog/product-dialog/product-dialog.html
@@ -47,7 +47,7 @@
       </mat-form-field>
     </div>
 
-    <!-- Fila inferior -->
+    <!-- Group inferior -->
     <div class="col-span-full grid md:grid-cols-2 lg:grid-cols-2 gap-4">
       <mat-form-field  class="w-full *:px-3" >
         <mat-label>Stock</mat-label>
