--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/contactanos-page/contactanos-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/contactanos-page/contactanos-page.html
@@ -18,7 +18,7 @@
     <section class="my-12 grid grid-cols-1 md:grid-cols-12 gap-8 items-start">
       <!-- Lado Izquierdo (3 columnas) -->
       <div
-        class="md:col-span-3 p-6 rounded-lg shadow-md bg-white border border-transparent hover:border-blue-600 transition-all duration-300"
+        class="md:col-span-3 p-6 rounded-lg shadow-md  border border-transparent hover:border-blue-600 transition-all duration-300"
       >
         <div class="text-center mb-6">
           <img
@@ -56,7 +56,7 @@
 
       <!-- Lado Derecho (9 columnas) -->
       <div
-        class="md:col-span-9 p-6 rounded-lg shadow-md bg-white border border-transparent hover:border-blue-600 transition-all duration-300"
+        class="md:col-span-9 p-6 rounded-lg shadow-md  border border-transparent hover:border-blue-600 transition-all duration-300"
       >
         <form (ngSubmit)="onSubmit()" #contactForm="ngForm" class="flex flex-col gap-4">
           <div>
