corrigiendo descuentos y agregando modulos de crud en angular

--- a/front end/rcf-soluciones-informaticas-angular/src/app/admin/components/panel-admin/panel-admin.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/admin/components/panel-admin/panel-admin.html
@@ -17,6 +17,9 @@
         <a routerLink="/admin/products" routerLinkActive="active-link" class="px-4 py-2 font-semibold flex items-center gap-2">
           <mat-icon>inventory</mat-icon> Productos
         </a>
+        <a routerLink="/admin/services" routerLinkActive="active-link" class="px-4 py-2 font-semibold flex items-center gap-2">
+            <mat-icon>build</mat-icon> Servicios
+        </a>
         <a routerLink="/admin/categories" routerLinkActive="active-link" class="px-4 py-2 font-semibold flex items-center gap-2">
           <mat-icon>category</mat-icon> Categorías
         </a>
