--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/layout-page/layout-page.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/layout-page/layout-page.html
@@ -1,3 +1,15 @@
-<app-header />
-<router-outlet></router-outlet>
+<app-header (openCart)="drawer.open()" />
+
+<mat-drawer-container class="flex-1 min-h-[calc(100vh-120px)]"> 
+  <!-- Drawer lateral -->
+  <mat-drawer #drawer mode="over" position="end" class="w-80 p-4 bg-white shadow-lg">
+    <app-carrito></app-carrito>
+  </mat-drawer>
+
+  <!-- Contenido principal -->
+  <mat-drawer-content class="p-4 bg-gray-50">
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
+
 <app-footer />
