--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/carrito/carrito.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/components/carrito/carrito.html
@@ -11,7 +11,7 @@
         <p class="text-sm text-gray-600">Cantidad: {{ getProductQuantity(cartItem.product.id) }}</p>
       </div>
         <div>
-          <p class="font-semibold">S/. {{ (cartItem.product.basePriceCents / 100) | number:'1.2-2' }}</p>
+          <p class="font-semibold">S/. {{ (cartItem.product.salePriceCents / 100) | number:'1.2-2' }}</p>
         </div>
       </div>
         <div class="flex justify-end w-full gap-2 mt-2">
