--- a/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/orders/orders.html
+++ b/front end/rcf-soluciones-informaticas-angular/src/app/tienda/pages/orders/orders.html
@@ -7,7 +7,7 @@
     <button
       mat-raised-button
       (click)="filtrarPorEstado('TODAS')"
-      class="p-6 w-full rounded-lg shadow-md bg-blue-50 hover:bg-blue-100 transition-all duration-300 flex flex-col items-center justify-center">
+      class="button-order">
       <h3 class="text-3xl font-bold text-blue-600">{{ totalOrdenes }}</h3>
       <h6 class="text-gray-700 font-medium">Total de Órdenes</h6>
     </button>
@@ -16,7 +16,7 @@
     <button
       mat-raised-button
       (click)="filtrarPorEstado('PENDING')"
-      class="p-6 w-full rounded-lg shadow-md bg-yellow-50 hover:bg-yellow-100 transition-all duration-300 flex flex-col items-center justify-center">
+      class="button-order">
       <h3 class="text-3xl font-bold text-yellow-600">{{ ordenesProcesando }}</h3>
       <h6 class="text-gray-700 font-medium">En Progreso</h6>
     </button>
@@ -25,7 +25,7 @@
     <button
       mat-raised-button
       (click)="filtrarPorEstado('COMPLETED')"
-      class="p-6 w-full rounded-lg shadow-md bg-green-50 hover:bg-green-100 transition-all duration-300 flex flex-col items-center justify-center">
+      class="button-order">
       <h3 class="text-3xl font-bold text-green-600">{{ ordenesFinalizadas }}</h3>
       <h6 class="text-gray-700 font-medium">Finalizadas</h6>
     </button>
@@ -34,7 +34,7 @@
     <button
       mat-raised-button
       (click)="filtrarPorEstado('CANCELLED')"
-      class="p-6 w-full rounded-lg shadow-md bg-red-50 hover:bg-red-100 transition-all duration-300 flex flex-col items-center justify-center">
+      class="button-order">
       <h3 class="text-3xl font-bold text-red-600">{{ ordenesCanceladas }}</h3>
       <h6 class="text-gray-700 font-medium">Canceladas</h6>
     </button>
@@ -65,7 +65,7 @@
       <!-- Total -->
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef> Total (S/.) </th>
-        <td mat-cell *matCellDef="let order"> {{ order.totalCents | number:'1.2-2' }} </td>
+        <td mat-cell *matCellDef="let order"> {{ (order.totalCents / 100) | currency:order.code:'symbol':'1.2-2' }} </td>
       </ng-container>
 
       <!-- Estado -->
